# blackbird

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  (+3 more)
src-tauri/: .env  Cargo.toml  database.db  tauri.conf.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20230724_024746_create_pieces.rs  m20230724_024751_create_parts.rs  m20230724_024754_create_musicians.rs  m20230724_024758_create_instruments.rs  m20230724_024817_create_tags.rs  m20230724_024826_create_ensembles.rs  m20230724_035659_create_pieces_tags.rs  m20230724_042543_create_ensembles_parts.rs  m20230728_092102_create_scores.rs  m20230731_044608_create_setlists.rs  m20230731_044622_create_pieces_setlists.rs  m20230803_094322_create_ensemble_parts_instruments.rs  m20240601_105525_create_tags.rs
src-tauri/src/: main.rs  models.rs  schema.rs  settings.rs  state.rs  utils.rs
src-tauri/src/app/: menu.rs  mod.rs  setup.rs
src-tauri/src/commands/: files.rs  fs.rs  mod.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/entities/: ensemble_parts_instruments.rs  ensembles.rs  ensembles_instruments.rs  ensembles_parts.rs  instruments.rs  mod.rs  musicians.rs  parts.rs  parts_instruments.rs  pieces.rs  pieces_musicians.rs  pieces_setlists.rs  pieces_tags.rs  prelude.rs  scores.rs  setlists.rs  tags.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/migrator/: m20230724_024746_create_pieces.rs  m20230724_024751_create_parts.rs  m20230724_024754_create_musicians.rs  m20230724_024758_create_instruments.rs  mod.rs  (+11 more)
(+167 files in other folders)
