[package]
name = "blackbird"
version = "0.2.0"
description = "A desktop application for managing sheet music"
authors = ["Garon Fok"]
license = "GPL-3.0+"
repository = "https://github.com/garonfok/blackbird"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = [ "global-shortcut-all", "os-all", "process-relaunch", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.5"
directories = "5.0.1"
lazy_static = "1.4.0"
sea-orm = { version = "0.11.3", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print",
] }
futures = "0.3.28"
sea-orm-migration = "0.11.3"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
chrono = "0.4.26"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
indexmap = "2.0.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
base64 = "0.21.2"
eyre = "0.6.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
